// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`await import() should receive a thennable without calling .then 1`] = `
"
async ({ page }) => await import(\`../components/\${page}\`);

      ↓ ↓ ↓ ↓ ↓ ↓

var _importCss2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/importCss\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

async ({
  page
}) => await (0, _universalImport2.default)(() => Promise.all([import(
/* webpackChunkName: 'components/[request]' */
\`../components/\${page}\`), (0, _importCss2.default)(\`components/\${page}\`, {})]).then(proms => proms[0]), false);
"
`;

exports[`babelServer: true 1`] = `
"
import(\\"./Foo\\")

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"./Foo\\",
  file: \\"/dev/null\\",
  path: () => _path2.default.join(__dirname, \\"./Foo\\"),
  resolve: () => require.resolveWeak(\\"./Foo\\"),
  chunkName: () => \\"Foo\\"
});
"
`;

exports[`disableWarnings: true 1`] = `
"
import(\\"./Foo\\")

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _importCss2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/importCss\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"./Foo\\",
  file: \\"/dev/null\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'Foo' */
  \\"./Foo\\"), (0, _importCss2.default)(\\"Foo\\", {
    disableWarnings: true
  })]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, \\"./Foo\\"),
  resolve: () => require.resolveWeak(\\"./Foo\\"),
  chunkName: () => \\"Foo\\"
});
"
`;

exports[`dynamic import (string template + relative paths) 1`] = `
"
import(\`../../base/\${page}\`)

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _importCss2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/importCss\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"../../base/\${page}\\",
  file: \\"/dev/null\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'base/[request]' */
  \`../../base/\${page}\`), (0, _importCss2.default)(\`base/\${page}\`, {})]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, \`../../base/\${page}\`),
  resolve: () => require.resolveWeak(\`../../base/\${page}\`),
  chunkName: () => \`base/\${page}\`
});
"
`;

exports[`dynamic import (string template - dynamic at 1st segment) 1`] = `
"
import(\`./\${page}\`)

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _importCss2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/importCss\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"./\${page}\\",
  file: \\"/dev/null\\",
  load: () => Promise.all([import(
  /* webpackChunkName: '[request]' */
  \`./\${page}\`), (0, _importCss2.default)(\`\${page}\`, {})]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, \`./\${page}\`),
  resolve: () => require.resolveWeak(\`./\${page}\`),
  chunkName: () => \`\${page}\`
});
"
`;

exports[`dynamic import (string template with multiple nested folders) 1`] = `
"
import(\`./base/\${page}/nested/{$another}folder\`)

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _importCss2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/importCss\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"./base/\${page}/nested/{$another}folder\\",
  file: \\"/dev/null\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'base/[request]' */
  \`./base/\${page}/nested/{$another}folder\`), (0, _importCss2.default)(\`base/\${page}-nested-{$another}folder\`, {})]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, \`./base/\${page}/nested/{$another}folder\`),
  resolve: () => require.resolveWeak(\`./base/\${page}/nested/{$another}folder\`),
  chunkName: () => \`base/\${page}-nested-{$another}folder\`
});
"
`;

exports[`dynamic import (string template with nested folder) 1`] = `
"
import(\`./base/\${page}/nested/folder\`)

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _importCss2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/importCss\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"./base/\${page}/nested/folder\\",
  file: \\"/dev/null\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'base/[request]' */
  \`./base/\${page}/nested/folder\`), (0, _importCss2.default)(\`base/\${page}-nested-folder\`, {})]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, \`./base/\${page}/nested/folder\`),
  resolve: () => require.resolveWeak(\`./base/\${page}/nested/folder\`),
  chunkName: () => \`base/\${page}-nested-folder\`
});
"
`;

exports[`dynamic import (string template) 1`] = `
"
import(\`./base/\${page}\`)

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _importCss2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/importCss\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"./base/\${page}\\",
  file: \\"/dev/null\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'base/[request]' */
  \`./base/\${page}\`), (0, _importCss2.default)(\`base/\${page}\`, {})]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, \`./base/\${page}\`),
  resolve: () => require.resolveWeak(\`./base/\${page}\`),
  chunkName: () => \`base/\${page}\`
});
"
`;

exports[`existing chunkName 1`] = `
"
import(/* webpackChunkName: 'Bar' */\\"./Foo\\")

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _importCss2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/importCss\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"./Foo\\",
  file: \\"/dev/null\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'Bar' */
  \\"./Foo\\"), (0, _importCss2.default)(\\"Foo\\", {})]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, \\"./Foo\\"),
  resolve: () => require.resolveWeak(\\"./Foo\\"),
  chunkName: () => \\"Bar\\"
});
"
`;

exports[`multiple imports 1`] = `
"
import(\\"one\\"); import(\\"two\\"); import(\\"three\\");

      ↓ ↓ ↓ ↓ ↓ ↓

var _path4 = _interopRequireDefault(require(\\"path\\"));

var _importCss4 = _interopRequireDefault(require(\\"babel-plugin-universal-import/importCss\\"));

var _universalImport4 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport4.default)({
  id: \\"one\\",
  file: \\"/dev/null\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'one' */
  \\"one\\"), (0, _importCss4.default)(\\"one\\", {})]).then(proms => proms[0]),
  path: () => _path4.default.join(__dirname, \\"one\\"),
  resolve: () => require.resolveWeak(\\"one\\"),
  chunkName: () => \\"one\\"
});
(0, _universalImport4.default)({
  id: \\"two\\",
  file: \\"/dev/null\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'two' */
  \\"two\\"), (0, _importCss4.default)(\\"two\\", {})]).then(proms => proms[0]),
  path: () => _path4.default.join(__dirname, \\"two\\"),
  resolve: () => require.resolveWeak(\\"two\\"),
  chunkName: () => \\"two\\"
});
(0, _universalImport4.default)({
  id: \\"three\\",
  file: \\"/dev/null\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'three' */
  \\"three\\"), (0, _importCss4.default)(\\"three\\", {})]).then(proms => proms[0]),
  path: () => _path4.default.join(__dirname, \\"three\\"),
  resolve: () => require.resolveWeak(\\"three\\"),
  chunkName: () => \\"three\\"
});
"
`;

exports[`static import (import as function with relative paths + nested folder) 1`] = `
"
const obj = {component:()=>import(\`../components/nestedComponent\`)}; ()=> obj.component()

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _importCss2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/importCss\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

const obj = {
  component: () => (0, _universalImport2.default)({
    id: \\"../components/nestedComponent\\",
    file: \\"/dev/null\\",
    load: () => Promise.all([import(
    /* webpackChunkName: 'components-nestedComponent' */
    \`../components/nestedComponent\`), (0, _importCss2.default)(\\"components/nestedComponent\\", {})]).then(proms => proms[0]),
    path: () => _path2.default.join(__dirname, \`../components/nestedComponent\`),
    resolve: () => require.resolveWeak(\`../components/nestedComponent\`),
    chunkName: () => \\"components-nestedComponent\\"
  })
};

() => obj.component();
"
`;

exports[`static import (relative paths + nested folder) 1`] = `
"
import(\`../components/nestedComponent\`)

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _importCss2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/importCss\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"../components/nestedComponent\\",
  file: \\"/dev/null\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'components-nestedComponent' */
  \`../components/nestedComponent\`), (0, _importCss2.default)(\\"components/nestedComponent\\", {})]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, \`../components/nestedComponent\`),
  resolve: () => require.resolveWeak(\`../components/nestedComponent\`),
  chunkName: () => \\"components-nestedComponent\\"
});
"
`;

exports[`static import (string template + relative paths) 1`] = `
"
import(\`../../base\`)

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _importCss2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/importCss\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"../../base\\",
  file: \\"/dev/null\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'base' */
  \`../../base\`), (0, _importCss2.default)(\`base\`, {})]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, \`../../base\`),
  resolve: () => require.resolveWeak(\`../../base\`),
  chunkName: () => \`base\`
});
"
`;

exports[`static import (string template) 1`] = `
"
import(\`./base\`)

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _importCss2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/importCss\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"./base\\",
  file: \\"/dev/null\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'base' */
  \`./base\`), (0, _importCss2.default)(\`base\`, {})]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, \`./base\`),
  resolve: () => require.resolveWeak(\`./base\`),
  chunkName: () => \`base\`
});
"
`;

exports[`static import (with file extension) 1`] = `
"
import(\\"./Foo.js\\")

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _importCss2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/importCss\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"./Foo.js\\",
  file: \\"/dev/null\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'Foo' */
  \\"./Foo.js\\"), (0, _importCss2.default)(\\"Foo\\", {})]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, \\"./Foo.js\\"),
  resolve: () => require.resolveWeak(\\"./Foo.js\\"),
  chunkName: () => \\"Foo\\"
});
"
`;

exports[`static import (with relative paths) 1`] = `
"
import(\\"../../Foo\\")

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _importCss2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/importCss\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"../../Foo\\",
  file: \\"/dev/null\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'Foo' */
  \\"../../Foo\\"), (0, _importCss2.default)(\\"Foo\\", {})]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, \\"../../Foo\\"),
  resolve: () => require.resolveWeak(\\"../../Foo\\"),
  chunkName: () => \\"Foo\\"
});
"
`;

exports[`static import 1`] = `
"
import(\\"./Foo\\")

      ↓ ↓ ↓ ↓ ↓ ↓

var _path2 = _interopRequireDefault(require(\\"path\\"));

var _importCss2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/importCss\\"));

var _universalImport2 = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

(0, _universalImport2.default)({
  id: \\"./Foo\\",
  file: \\"/dev/null\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'Foo' */
  \\"./Foo\\"), (0, _importCss2.default)(\\"Foo\\", {})]).then(proms => proms[0]),
  path: () => _path2.default.join(__dirname, \\"./Foo\\"),
  resolve: () => require.resolveWeak(\\"./Foo\\"),
  chunkName: () => \\"Foo\\"
});
"
`;
